--- a/theaterlaakreact/src/assets/Bandpagina.css
+++ b/theaterlaakreact/src/assets/Bandpagina.css
@@ -39,3 +39,11 @@
     padding-left: 25%;
   }
   
+  .Aanmaak{
+display: flex;
+  }
+
+  .knop9{
+    padding-top: 2.8%;
+    padding-left: 2%;
+  }
