Finished Voorstellingen zalen and bands

--- a/theaterlaakreact/src/components/css/style.css
+++ b/theaterlaakreact/src/components/css/style.css
@@ -11,6 +11,11 @@
     font-weight: 100;
 }
 
+.card {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 0px 10px -2px, rgba(0, 0, 0, 0.3) 0px 3px 2px -3px !important;
+}
+
+
 .darker-card {
     background-color: rgb(116,110,218,1) !important;
     color: white;
